--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "nedb": "^1.8.0",
     "nodemon": "^2.0.16"
   }
 }
