--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "ejs": "^3.1.7",
     "express": "^4.18.1",
-    "nedb": "^1.8.0"
+    "mongoose": "^6.3.3",
+    "passport": "^0.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
