--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.3.3",
-    "nedb": "^1.8.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "nodemon": "^2.0.16"
   }
 }
